--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,9 @@ version = '1.19.2-1.0.4'
 
 java {
     archivesBaseName = 'AtomLib-forge'
-    toolchain.languageVersion = JavaLanguageVersion.of(17)
+    //toolchain.languageVersion = JavaLanguageVersion.of(17)
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 minecraft {
