--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,5 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+archives_base_name=AtomLib-forge
+maven_group=cn.evolvefield.mods
+version=1.19.2-1.1.0
