--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,11 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+mod_id=atomlib
+mod_name=AtomLib
+maven_group=committee.nova
 archives_base_name=AtomLib-forge
-maven_group=cn.evolvefield.mods
-version=1.19.2-1.1.0
+java_version=17
+forge_version=43.1.52
+parchment_mappings=2022.11.06
+minecraft_version=1.19.2
+mod_version=1.1.1
