--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 mod_id=atomlib
 mod_name=AtomLib
-maven_group=committee.nova
+maven_group=cn.evolvefield.mods
 archives_base_name=AtomLib-forge
 java_version=17
 forge_version=43.1.52
