--- a/build.gradle
+++ b/build.gradle
@@ -124,50 +124,6 @@ dependencies {
 
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
-    def libraries = file("libs");
-    if (!libraries.isDirectory()) libraries.mkdirs()
-
-    def libDir = new File(libraries, "all");
-    if (libDir.isDirectory()) {
-        libDir.eachFile { file ->
-            def splitPos = file.name.lastIndexOf("-")
-            def modartifact = file.name.substring(0, splitPos)
-            def modversion = file.name.substring(splitPos + 1, file.name.length() - 4)
-            dependencies {
-                implementation fg.deobf(project.dependencies.create("_all:$modartifact:$modversion") {
-                    transitive = false
-                })
-            }
-        }
-    } else libDir.mkdir();
-
-    libDir = new File(libraries, "classpathOnly");
-    if (libDir.isDirectory()) {
-        libDir.eachFile { file ->
-            def splitPos = file.name.lastIndexOf("-")
-            def modartifact = file.name.substring(0, splitPos)
-            def modversion = file.name.substring(splitPos + 1, file.name.length() - 4)
-            dependencies {
-                compileClasspath fg.deobf(project.dependencies.create("_classpath:$modartifact:$modversion") {
-                    transitive = false
-                })
-            }
-        }
-    } else libDir.mkdir();
-
-    libDir = new File(libraries, "runtimeOnly");
-    if (libDir.isDirectory()) {
-        libDir.eachFile { file ->
-            def splitPos = file.name.lastIndexOf("-")
-            def modartifact = file.name.substring(0, splitPos)
-            def modversion = file.name.substring(splitPos + 1, file.name.length() - 4)
-            dependencies {
-                runtimeClasspath fg.deobf(project.dependencies.create("_runtime:$modartifact:$modversion") {
-                    transitive = false
-                })
-            }
-        }
-    } else libDir.mkdir();
 }
 
 tasks.withType(JavaCompile) {
@@ -242,7 +198,7 @@ publishing {
     publications {
         mavenJava(MavenPublication) { publication ->
             from components.java
-            jarJar.component(publication)
+            //jarJar.component(publication)
             version = "${project.version}"
             artifactId = "${project.archives_base_name}"
             groupId = "${project.maven_group}"
